--- a/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
+++ b/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
@@ -5,9 +5,9 @@
 <!-- delete confirmer -->
 
 <div class="d-flex justify-content-center pt-3">
-    <div id="myDeleteConfirmer" class="delete-post-window animate__slideInDown">
+    <div id="myDeleteConfirmer" class="delete-post-window ddeleter animate__slideInDown">
         <p class="dialog-message">Do youy wanto to delete event?</p>
-        <button id="deleteConfirmButton" class="filter-button">Yes</button>
+        <button id="deleteConfirmButton" class="filter-button apply-border">Yes</button>
         <button id="deleteCancelButton" class="filter-button">No</button>
     </div>
 </div>
