--- a/SchoolManagmentApp/teacherApp/templates/edit_attendance.html
+++ b/SchoolManagmentApp/teacherApp/templates/edit_attendance.html
@@ -10,7 +10,7 @@
         <div class="filter-content mt-2">
             <form method="post">
                 {% csrf_token %}
-                <table class="table text-white table-colors">
+                <table class="table text-white">
                     <thead>
                         <tr>
                             <th>Student</th>
@@ -28,7 +28,7 @@
                     </tbody>
                 </table>
                 <div class="text-center mt-3">
-                <button class="apply-button" type="submit">Update</button>
+                <button class="login-nav-btn apply-border" type="submit">Update</button>
             </div>
             </form>
         </div>
