--- a/SchoolManagmentApp/teacherApp/templates/lesson_class_initiation.html
+++ b/SchoolManagmentApp/teacherApp/templates/lesson_class_initiation.html
@@ -27,7 +27,7 @@
                 </tbody>
             </table>
             <div class="text-center mt-3">
-            <button class="apply-button" type="submit">Apply</button>
+            <button class="login-nav-btn apply-border" type="submit">Apply</button>
         </div>
         </form>
     </div>
