--- a/SchoolManagmentApp/eventApp/templates/add_event.html
+++ b/SchoolManagmentApp/eventApp/templates/add_event.html
@@ -16,36 +16,35 @@
     <div class="report-card-detail text-white">
         <div class="report-text">
             <div>
-                <h2>Event for lesson "{{current_lesson_report.lesson_title}}"</h2>
+                <h2>Event for lesson "{{current_lesson_report.lesson_title}}" Subject: {{current_lesson_report.subject}}</h2>
             </div>
-            <div>
-                <h4>Subject: {{current_lesson_report.subject}}</h4>
-            </div>
+ 
         </div>
         <div class="mt-2 card-divider"></div>
+
         <div class="filter-content mt-2">
             <form method="post">
                 {% csrf_token %}
-                <div>Description:</div>
+                <div class="mt-2">Description:</div>
                 <div class="m-3">{{ add_event_form.description }}</div>
                 <div class="mb-3"> Event type: {{ add_event_form.event_type }}</div>
 
                 <div class="mb-3"> Realisation Date: {{ add_event_form.realisation_time }}</div>
 
-                
+
                 <div class="text-center">
-                <button class="apply-button" type="submit">Add Event</button>
+                    <button class="login-nav-btn apply-border" type="submit">Add Event</button>
                 </div>
             </form>
         </div>
-<div class="mt-3">
-        <a class="container-fluid" href="{% url 'lesson_conducting' current_lesson_report.id %}">
-            <i class="fa-solid fa-backward back-button-image " style="color: #023602;"></i>
-        </a>
-    </div>
+        <div class="mt-3">
+            <a class="container-fluid" href="{% url 'lesson_conducting' current_lesson_report.id %}">
+                <i class="fa-solid fa-backward back-button-image " style="color: #023602;"></i>
+            </a>
+        </div>
     </div>
 </div>
-</div>
+
 
 
 {% endblock content %}
