--- a/SchoolManagmentApp/eventApp/templates/teacher_events.html
+++ b/SchoolManagmentApp/eventApp/templates/teacher_events.html
@@ -5,7 +5,7 @@
 <div id="filterButton" class="filter-button">Filtering</div>
 
 <div id="filterWindow" class="filter-window">
-    <div class="filter-content">
+    <div class="filter-content ">
         <span class="filter-close" id="filterButtonClose">&times;</span>
         <div class="filter-form">
 
@@ -13,8 +13,8 @@
                 <div class="form-field">
 
                     {% csrf_token %}
-                    <label for="subject">Subject:</label>
-                    <select name="subject" id="subject" class="filter-form-control">
+                    <label for="subject" class="text-white">Subject:</label>
+                    <select name="subject" id="subject" class="">
                         <option value="empty">Empty</option>
                         <option value="Mathematic">Mathematic</option>
                         <option value="History">History</option>
@@ -25,8 +25,8 @@
                     </select>
                 </div>
                 <div class="form-field">
-                    <label for="event_type">Event Type:</label>
-                    <select name="event_type" id="event_type" class="filter-form-control">
+                    <label for="event_type" class="text-white">Event Type:</label>
+                    <select name="event_type" id="event_type" class="">
                         <option value="empty">Empty</option>
                         <option value="Other">Other</option>
                         <option value="Small Test">Small Test</option>
@@ -36,14 +36,14 @@
                     </select>
                 </div>
                 <div class="form-field">
-                    <label for="start_date">Start Date:</label>
-                    <input type="date" name="start_date" class="filter-form-control">
+                    <label for="start_date" class="text-white">Start Date:</label>
+                    <input type="date" name="start_date" class="">
                 </div>
                 <div class="form-field" typ="date">
-                    <label for="end_date">End Date:</label>
-                    <input type="date" name="end_date" class="filter-form-control">
+                    <label for="end_date" class="text-white">End Date:</label>
+                    <input type="date" name="end_date" class="">
                 </div>
-                <button type="submit" class="apply-button">Apply</button>
+                <button type="submit" class="login-nav-btn apply-border">Apply</button>
             </form>
         </div>
     </div>
@@ -84,7 +84,7 @@
     <!-- pagination -->
     {% if pages.paginator.num_pages > 1 %}
     <nav aria-label="...">
-        <ul class="pagination d-flex justify-content-center">
+        <ul class="pagination d-flex justify-content-center mb-0">
             {% if pages.has_previous %}
             <li class="">
                 <a class="page-link" href="?page={{ pages.previous_page_number }}">Prevoius</a>
