--- a/SchoolManagmentApp/teacherApp/templates/lesson_conducting.html
+++ b/SchoolManagmentApp/teacherApp/templates/lesson_conducting.html
@@ -30,14 +30,14 @@
         <div class="filter-content mt-2">
             <form method="post" class="">
                 {% csrf_token %}
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center mt-2">
                     {{ lesson_report_text.lesson_title}}
                 </div>
                 <div class="mt-3">
                     {{ lesson_report_text.lesson_description }}
                 </div>
                 <div class="text-center mt-3">
-                    <button class="apply-button" type="submit">Finalize raport</button>
+                    <button class="login-nav-btn apply-border" type="submit">Finalize raport</button>
 
                 </div>
             </form>           
