--- a/SchoolManagmentApp/teacherApp/templates/teacher_app.html
+++ b/SchoolManagmentApp/teacherApp/templates/teacher_app.html
@@ -67,7 +67,7 @@
 <!-- pagination -->
 {% if pages.paginator.num_pages > 1 %}
                 <nav aria-label="..." >
-                    <ul class="pagination d-flex justify-content-center">
+                    <ul class="pagination d-flex justify-content-center mb-0">
                         {% if pages.has_previous %}
                             <li class="">
                                 <a class="page-link" href="?page={{ pages.previous_page_number }}">Prevoius</a>
