--- a/SchoolManagmentApp/teacherApp/templates/pure_report.html
+++ b/SchoolManagmentApp/teacherApp/templates/pure_report.html
@@ -26,7 +26,7 @@
     <!-- eventes connected to raport -->
     <div class="report-events-display text-white d-flex justify-content-around">
         {% for event in connected_events %}
-        <div class="report-events ">
+        <div class="report-card-detail ">
             <h5 class="card-title text-center mb-3">{{event.event_type}}</h5>
             <h6 class="card-title text-center mb-3">Realisation: {{event.realisation_time}} </h6>
             <div class="mb-2 mt-2 card-divider"></div>
