correction of minor functions

--- a/SchoolManagmentApp/eventApp/templates/events.html
+++ b/SchoolManagmentApp/eventApp/templates/events.html
@@ -30,6 +30,7 @@
                             <select name="subject" id="subject" class="">
                                 <option value="empty">Empty</option>
                                 <option value="Mathematic">Mathematic</option>
+                                <option value="English">English</option>
                                 <option value="History">History</option>
                                 <option value="Biology">Biology</option>
                                 <option value="Physics">Physics</option>
