--- a/SchoolManagmentApp/teacherApp/templates/grades_submition.html
+++ b/SchoolManagmentApp/teacherApp/templates/grades_submition.html
@@ -10,7 +10,7 @@
         </div>
         <div class="mt-2 card-divider"></div>
         <div class="filter-content mt-2">
-            <table class="table text-white table-colors">
+            <table class="table text-white">
                 <tbody>
                     
                     {% for student, grades in current_lesson_grades.items %}
