--- a/SchoolManagmentApp/teacherApp/templates/lesson_conducting.html
+++ b/SchoolManagmentApp/teacherApp/templates/lesson_conducting.html
@@ -24,7 +24,7 @@
             class="filter-button">Aattendance</button></a>
 
         <a class="text-decoration-none mx-2" href="{% url 'grades_teacher' current_lesson_report.id %}"><button id="filterButton"
-            class="filter-button">Enter grades</button></a>
+            class="filter-button">Grades</button></a>
         </div>
         
         <div class="filter-content mt-2">
