finalized adding and editing grades in lesson report

--- a/SchoolManagmentApp/eventApp/templates/events.html
+++ b/SchoolManagmentApp/eventApp/templates/events.html
@@ -36,7 +36,7 @@
                                 <option value="Biology">Biology</option>
                                 <option value="Physics">Physics</option>
                                 <option value="Chemistry">Chemistry</option>
-                                <option value="Philosphy">Philosophy</option>
+                                <option value="Philosophy">Philosophy</option>
                             </select>
 
                             
