--- a/SchoolManagmentApp/eventApp/templates/teacher_events.html
+++ b/SchoolManagmentApp/eventApp/templates/teacher_events.html
@@ -15,20 +15,20 @@
                     {% csrf_token %}
                     <label for="subject" class="text-white">Subject:</label>
                     <select name="subject" id="subject" class="">
-                        <option value="all">All</option>
+                        <option value="All">All</option>
                         <option value="Mathematic">Mathematic</option>
                         <option value="English">English</option>
                         <option value="History">History</option>
                         <option value="Biology">Biology</option>
                         <option value="Physics">Physics</option>
                         <option value="Chemistry">Chemistry</option>
-                        <option value="Philosphy">Philosophy</option>
+                        <option value="Philosophy">Philosophy</option>
                     </select>
                 </div>
                 <div class="form-field">
                     <label for="event_type" class="text-white">Event Type:</label>
                     <select name="event_type" id="event_type" class="">
-                        <option value="all">All</option>
+                        <option value="All">All</option>
                         <option value="Other">Other</option>
                         <option value="Small Test">Small Test</option>
                         <option value="Test">Test</option>
