--- a/SchoolManagmentApp/gradesApp/templates/view_grades.html
+++ b/SchoolManagmentApp/gradesApp/templates/view_grades.html
@@ -1,9 +1,59 @@
 {%extends 'base.html'%}
 {%load static%}
+{% load widget_tweaks %}
 {%block title%}
- Grades 
+Grades
 {%endblock title%}
 {%block content%}
-{{grades}}
-<h2>hello</h2>
-{% endblock content%}
+<div>
+    <div class="d-flex justify-content-center flex-column">
+        <div class="d-flex justify-content-center mt-5 flex-column">
+
+            <div class="d-flex justify-content-end search mr-2">
+                <form method="POST" class="max-width-semester">
+                    {% csrf_token %}
+
+                    {%for field in form %}
+                    {{field|add_class:"select-clas-btn-fields"}}
+                    {%endfor%}
+
+                    <button type="submit" class="btn text-subject select-clas-btn ">Select</button>
+                </form>
+
+            </div>
+
+            {% for kid, grades in kids_grades.items %}
+            <h1 class='text-white mt-2'>{{ kid.user.user.first_name }} {{ kid.user.user.last_name }}'s grades:</h1>
+            <table class="mt-1 rounded schedule">
+                <tr>
+                    <th>Przedmiot</th>
+                    {% for number in iterateover %}
+                    <th>{{ number|add:1 }}</th>
+                    {% endfor %}
+                </tr>
+
+                {% for subject, student_grades in grades.items %}
+                <tr>
+                    <td class="text-center text-white bolded">{{ subject.name }}</td>
+                    {% for grade in student_grades %}
+                    <td class="text-center"><button type="button" class="btn btn-secondary" data-container="body"
+                            data-toggle="popover" data-placement="top"
+                            title="Grade submitted {{ grade.date }} by {{ grade.submitted_by }}"
+                            data-content="{{ grade.grade_description }}">
+                            {{ grade.grade }}
+                        </button></td>
+                    {% endfor %}
+                </tr>
+                {% endfor %}
+            </table>
+            {% endfor %}
+
+        </div>
+    </div>
+
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="popover"]').popover();
+        });
+    </script>
+    {% endblock content%}
