--- a/SchoolManagmentApp/usersApp/templates/authors.html
+++ b/SchoolManagmentApp/usersApp/templates/authors.html
@@ -80,8 +80,43 @@
 						</ul>
 					</nav>
 				</header>
-				{%block content%}
-				{%endblock content%}
-		<script type="text/javascript" src="{% static 'js/base_script.js' %}"></script>
+                </div>
+				<div class="cards">
+                    <div class="card one">
+                        <button><i class="far fa-question-circle"></i></button>
+                        <div class="text">
+                            <h1>Łukasz Mroczkowski</h1>
+                            <h2>Junior Python Developer</h2>
+                            <div class="social">
+                            <a href="https://www.linkedin.com/in/mroczkowski-lukasz/" target="_blank"
+                            ><i class="fa-brands fa-linkedin fa-xl"></i></a>
+
+                            <a href="https://www.codewars.com/users/Mrokus95" target="_blank"
+                            >Codewars</a>
+
+                            <a href="https://github.com/Mrokus95" target="_blank"
+                            ><i class="fa-brands fa-github fa-xl"></i></a>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="card two">
+                        <button><i class="far fa-question-circle"></i></button>
+                        <div class="text">
+                            <h1>Mateusz Świst</h1>
+                            <h2>Junior Python Developer</h2>
+                            <div class="social">
+                                <a href="https://www.linkedin.com/in/mateusz-%C5%9Bwist/" target="_blank"
+                                    ><i class="fa-brands fa-linkedin fa-xl"></i></a>
+                                <a href="https://www.codewars.com/users/MatS1" target="_blank"
+                                    >Codewars</a>
+                                <a href="https://github.com/MateuszSwist" target="_blank"
+                                    ><i class="fa-brands fa-github fa-xl"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+		<script type="text/javascript" src="{% static 'js/authors_cards.js' %}"></script>
 	</body>
 </html>
+
