--- a/SchoolManagmentApp/usersApp/templates/index.html
+++ b/SchoolManagmentApp/usersApp/templates/index.html
@@ -25,6 +25,7 @@
 		<title>Liceum Ogólnokształcące</title>
 	</head>
 	<body>
+
 		{% if messages%}
 			{% for message in messages %}
 				{% if message.tags == 'error' %}
@@ -45,17 +46,15 @@
 						</div>
 						<ul class="nav-list">
 							{% if user.is_authenticated %}
-
-								<li><a href="{% url 'update_user_profile'%}"><img class='avatar-pic' src="{{ user.profile.photo.url }}" alt=""></a></li>
 								<li><a href="{% url 'logout' %}"><button id="login-nav" class="login-nav-btn" >Logout</button></a></li>
 							{% else %}
-								<li><a href="#">Authors</a></li>
+								<li><a href="{% url 'authors' %}">Authors</a></li>
 								<li><a href=""><button id="login-nav-btn" class="login-nav-btn">Login</button></a></li>
 							{%endif%}
 						</ul>
 					</nav>
 				</header>
-				<div class="container text-size-box">
+				<div class="container">
 					<div class="hero-text">
 						<h1>Welcome!</h1>
 						
