letter mistakes repaired

--- a/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
+++ b/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
@@ -44,9 +44,9 @@
 
                 <a id="deleteEvent" onclick="showDialog()" class="text-decoration-none"
                     href="{% url 'delete_event' event.id %}">
-                    <div class="filter-button">Delete event</div>
+                    <div class="login-nav-btn delete-button text-white">Delete event</div>
                 </a>
-
+                
                 <a class="text-decoration-none" href="{% url 'edit_event' event.id %}">
                     <div class="filter-button mx-2">Edit event</div>
                 </a>
