--- a/SchoolManagmentApp/calendarApp/templates/edit_lesson.html
+++ b/SchoolManagmentApp/calendarApp/templates/edit_lesson.html
@@ -13,7 +13,7 @@
             <div class="col-md-9 col-lg-6 col-xl-7 empty-class">
                 <div class="text-center">
                     <img src="{% static 'img/pencil.png' %}"
-                    class="img-fluid pics-height" alt="Sample image">
+                    class="img-fluid pics-height-transparent" alt="Sample image">
                 </div>
             </div>
             <div class="mt-5 col-12 col-md-8 col-lg-6 col-xl-5 d-flex justify-content-center align-items-center">
