--- a/SchoolManagmentApp/gradesApp/templates/view_grades.html
+++ b/SchoolManagmentApp/gradesApp/templates/view_grades.html
@@ -37,7 +37,7 @@ Grades
                     <td class="text-center text-white bolded">{{ subject.name }}</td>
                     {% for grade in student_grades %}
                     <td class="text-center"><button type="button" class="btn btn-secondary" data-container="body"
-                            data-toggle="popover" data-placement="top"
+                            data-toggle="popover" data-trigger="focus" data-placement="top"
                             title="Grade submitted {{ grade.date }} by {{ grade.submitted_by }}"
                             data-content="{{ grade.grade_description }}">
                             {{ grade.grade }}
@@ -53,7 +53,8 @@ Grades
 
     <script>
         $(document).ready(function () {
-            $('[data-toggle="popover"]').popover();
-        });
+            $('[data-toggle="popover"]').popover({
+             trigger: 'focus'})
+      });
     </script>
     {% endblock content%}
