--- a/SchoolManagmentApp/gradesApp/templates/view_grades_teacher.html
+++ b/SchoolManagmentApp/gradesApp/templates/view_grades_teacher.html
@@ -37,7 +37,7 @@ Grades
                     {% for grade in grades %}
                         <td class="text-center">
                             <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover"
-                                data-placement="top" title="Grade submitted {{ grade.date }} by {{ grade.submitted_by }}"
+                                data-placement="top" data-toggle="popover" title="Grade submitted {{ grade.date }} by {{ grade.submitted_by }}"
                                 data-content="{{ grade.grade_description }}">
                                 {{ grade.grade }}
                             </button>
@@ -52,7 +52,8 @@ Grades
 
     <script>
         $(document).ready(function () {
-            $('[data-toggle="popover"]').popover();
-        });
+            $('[data-toggle="popover"]').popover({
+             trigger: 'focus'})
+      });
     </script>
     {% endblock content%}
