minor js location changes

--- a/SchoolManagmentApp/eventApp/templates/events.html
+++ b/SchoolManagmentApp/eventApp/templates/events.html
@@ -157,4 +157,6 @@
             </a>
         {% endfor %}
     {% endif %}
+    {% load static %}
+    <script type="text/javascript" src="{% static 'js/filtering.js' %}"></script>
 {% endblock content %}
