--- a/SchoolManagmentApp/eventApp/templates/teacher_events.html
+++ b/SchoolManagmentApp/eventApp/templates/teacher_events.html
@@ -108,6 +108,7 @@
         </ul>
     </nav>
     {% endif %}
-
+    {% load static %}
+    <script type="text/javascript" src="{% static 'js/filtering.js' %}"></script>
 
     {% endblock content %}
