--- a/SchoolManagmentApp/teacherApp/templates/teacher_app.html
+++ b/SchoolManagmentApp/teacherApp/templates/teacher_app.html
@@ -90,7 +90,9 @@
                     </ul>
                 </nav>
             {% endif %}
+            
+            {% load static %}
+            <script type="text/javascript" src="{% static 'js/filtering.js' %}"></script>
 
-
-
-    {% endblock content %}
+            {% endblock content %}
+            
