Added tests to views

--- a/SchoolManagmentApp/usersApp/templates/password_change_form.html
+++ b/SchoolManagmentApp/usersApp/templates/password_change_form.html
@@ -12,7 +12,7 @@
 		class="card-body p-5 text-center"
 		>
 			<div class="mb-md-2 mt-md-4 pb-5">
-				<h2 class="fw-bold mb-2 text-uppercase">Change your password</h2>
+				<h2 class="fw-bold mb-2 text-uppercase">Change your password.</h2>
 
 				{%for field in form %}
                     {{field|add_class:"form-control form-control-md"}}
